<resources>
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Label for the location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Label for the location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">33326</string>

    <!-- Label for the unit preference [CHAR LIMIT=30] -->
    <string name="pref_unit_label">Temperature Units</string>

    <!-- Label for the unit preference [CHAR LIMIT=NONE] -->
    <string name="pref_unit_key" translatable="false">units</string>

    <!-- Label for the unit preference [CHAR LIMIT=NONE] -->
    <string name="pref_unit_default">metric</string>

    <string name="pref_unit_label_metric">Metric</string>
    <string name="pref_unit_label_imperial">Imperial</string>
    <string name="pref_unit_metric" translatable="false">metric</string>
    <string name="pref_unit_imperial" translatable="false">imperial</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="action_map">View on Map</string>

    <string name="share">Share</string>

</resources>
