<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="number"
        android:singleLine="true">
    </EditTextPreference>

    <ListPreference
        android:title="@string/pref_unit_label"
        android:dialogTitle="@string/pref_unit_label"
        android:key="@string/pref_unit_key"
        android:defaultValue="@string/pref_unit_default"
        android:entries="@array/pref_unit_options"
        android:entryValues="@array/pref_unit_values">
    </ListPreference>
</PreferenceScreen>